# Xtienk-X4-Wallpaper-maker

./: .gitignore  README.md  pyproject.toml  run-app.sh
tests/: conftest.py  test_crop_engine.py  test_export_engine.py  test_image_loader.py  test_privacy_rules.py  test_render_engine.py  test_ui_smoke.py
x4_wallpaper_maker/: __init__.py  app.py
x4_wallpaper_maker/core/: __init__.py  crop_engine.py  export_engine.py  image_loader.py  privacy_manager.py  render_engine.py  session_manager.py
x4_wallpaper_maker/models/: __init__.py  app_state.py
x4_wallpaper_maker/ui/: __init__.py  crop_view.py  export_dialog.py  import_view.py  main_window.py  preview_view.py
x4_wallpaper_maker/utils/: __init__.py  constants.py  drive_detection.py  file_dialogs.py  secure_cleanup.py
